[package]
name = "rvterminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
evdev = "0.12.1"
regex = "1.10.3"
reqwest = {version = "0.11.24", features = ["json", "blocking"]}
rusb = "0.9.3"
serde = {version = "1.0.196", features = ["derive"]}
