[package]
name = "rvterminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
evdev = "0.12.2"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
rusb = "0.9.4"
serde = { version = "1.0.208", features = ["derive"] }
